apps/k8s/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  ports:
    - port: 5525
  selector:
    app: frontend
